--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ footer {
     padding: 20px 15px;
   }
   
-  #band-logo {
+  #band- {
     font-size: 48px;
   }
   
@@ -254,8 +254,8 @@ footer {
 <div class="container">
 
 <header>
-  <div class="logo-container">
-    <img src="https://twinemusic.github.io/twineband.github.io/images/logo.png" alt="Twine Logo" class="logo-image" id="band-logo">
+  <div class="-container">
+    <img src="https://twinemusic.github.io/twineband.github.io/images/logo.png">
   </div>
   
   <nav>
@@ -273,10 +273,10 @@ footer {
   
   <div class="press-grid">
     <div class="press-item">
-      <img src="https://twinemusic.github.io/twineband.github.io/images/press1.jpg" alt="Twine Press Photo 1">
+      <img src="https://twinemusic.github.io/twineband.github.io/images/press1.png">
     </div>
     <div class="press-item">
-      <img src="https://twinemusic.github.io/twineband.github.io/images/press2.jpg" alt="Twine Press Photo 2">
+      <img src="https://twinemusic.github.io/twineband.github.io/images/press2.png">
     </div>
   </div>
 
