--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ footer {
 
 <header>
   <div class="-container">
-    <img src="https://twinemusic.github.io/twineband.github.io/images/logo.png">
+    <img src="https://twinemusic.github.io/images/logo.png">
   </div>
   
   <nav>
@@ -273,10 +273,10 @@ footer {
   
   <div class="press-grid">
     <div class="press-item">
-      <img src="https://twinemusic.github.io/twineband.github.io/images/press1.png">
+      <img src="https://twinemusic.github.io/images/press1.png">
     </div>
     <div class="press-item">
-      <img src="https://twinemusic.github.io/twineband.github.io/images/press2.png">
+      <img src="https://twinemusic.github.io/images/press2.png">
     </div>
   </div>
 
