--- a/index.html
+++ b/index.html
@@ -259,13 +259,14 @@ footer {
   </div>
   
   <nav>
-    <a href="#about">About</a>
-    <a href="#music">Music</a>
-    <a href="#shows">Shows</a>
-    <a href="#media">Media</a>
-    <a href="#press-links">Press</a>
-    <a href="lyrics.html">Lyrics</a>
-  </nav>
+  <a href="#about">About</a>
+  <a href="#music">Music</a>
+  <a href="#shows">Shows</a>
+  <a href="#media">Media</a>
+  <a href="#merch">Merch</a>
+  <a href="#press-links">Press</a>
+  <a href="lyrics.html">Lyrics</a>
+</nav>
 </header>
 
 <section id="about">
@@ -344,6 +345,19 @@ At first, title track “Deer in the Headlights” plays as a fingerpicked acous
   </div>
 </section>
 
+<section id="merch">
+  <h2>Merchandise</h2>
+  <div class="merch-container">
+    <div class="merch-item">
+      <h3>Official Merchandise</h3>
+      <p>Support Twine and get official merch from our BigCartel store.</p>
+      <a href="https://twineadl.bigcartel.com/" target="_blank" class="merch-button">
+        Visit Store →
+      </a>
+    </div>
+  </div>
+</section>
+  
 <section id="press-links">
   <h2>Press & Notable Links</h2>
   
