--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ footer {
 
 <header>
   <div class="logo-container">
-    <img src="https://twinemusic.github.io/images/logo.png" alt="Twine logo" class="logo-image">
+    <img src="images/logo.png" alt="Twine logo" class="logo-image">
   </div>
   
   <nav>
@@ -283,10 +283,10 @@ footer {
   
   <div class="press-grid">
     <div class="press-item">
-      <img src="https://twinemusic.github.io/images/press1.png" alt="Press 1">
+      <img src="images/press1.png" alt="Press 1">
     </div>
     <div class="press-item">
-      <img src="https://twinemusic.github.io/images/press2.png" alt="Press 2">
+      <img src="images/press2.png" alt="Press 2">
     </div>
   </div>
 
@@ -370,7 +370,7 @@ footer {
   <!-- NEW IMAGE LINK -->
   <div class="merch-image">
     <a href="https://twineadl.bigcartel.com/" target="_blank">
-      <img src="merch1.jpeg" alt="Twine Official Merchandise">
+      <img src="images/merch1.jpeg" alt="Twine Official Merchandise">
     </a>
   </div>
 </section>
