--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@ body {
   margin: 0;
   line-height: 1.6;
 }
+<!-- Geocities Decorations -->
+<img src="images/horse2.gif"
+     class="geocities-decoration horse-gif-1 horse-gif-large"
+     alt="Running horse">
 
+<img src="images/horse1.gif"
+     class="geocities-decoration horse-gif-2 horse-gif-large"
+     alt="Galloping horse">
+  
 .container {
   max-width: 900px;
   margin: 0 auto;
