--- a/index.html
+++ b/index.html
@@ -3,36 +3,58 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Twine</title>
+
+<title>Twine — Deer in the Headlights | Official Site</title>
+<meta name="description" content="Twine — wounded country and barrelling noise rock from Australia. Official site featuring music, shows, videos, press and merchandise.">
 
 <style>
+/* ------------------ Base ------------------ */
 body {
-  background: #ffffff;
-  color: #111111;
+  background: #fdfcf8;
+  color: #111;
   font-family: "Times New Roman", Georgia, serif;
   margin: 0;
-  line-height: 1.6;
+  line-height: 1.7;
 }
-<!-- Geocities Decorations -->
-<img src="images/horse2.gif"
-     class="geocities-decoration horse-gif-1 horse-gif-large"
-     alt="Running horse">
 
-<img src="images/horse1.gif"
-     class="geocities-decoration horse-gif-2 horse-gif-large"
-     alt="Galloping horse">
-  
 .container {
   max-width: 900px;
   margin: 0 auto;
   padding: 40px 20px;
+  position: relative;
+  z-index: 1;
 }
 
+/* ------------------ Geocities Decorations ------------------ */
+.geocities-decoration {
+  position: fixed;
+  z-index: 0;
+  opacity: 0.15;
+  pointer-events: none;
+}
+
+.horse-gif-1 {
+  bottom: 20px;
+  left: 20px;
+  width: 160px;
+}
+
+.horse-gif-2 {
+  top: 40px;
+  right: 20px;
+  width: 160px;
+}
+
+/* ------------------ Header / Nav ------------------ */
 header {
   text-align: center;
   padding: 40px 0 30px;
-  border-bottom: 2px solid #000;
-  margin-bottom: 40px;
+  border-bottom: 3px double #000;
+  margin-bottom: 60px;
+  position: sticky;
+  top: 0;
+  background: #fdfcf8;
+  z-index: 10;
 }
 
 .logo-container {
@@ -40,21 +62,15 @@ header {
 }
 
 .logo-image {
-  max-width: 400px;
-  max-height: 100px;
+  max-width: 520px;
+  max-height: 140px;
+  width: 100%;
   object-fit: contain;
-}
-
-#band-logo {
-  font-size: 64px;
-  font-weight: normal;
-  margin: 0;
-  letter-spacing: 2px;
 }
 
 nav {
   font-size: 16px;
-  margin-top: 20px;
+  letter-spacing: 0.5px;
 }
 
 nav a {
@@ -67,8 +83,9 @@ nav a:hover {
   text-decoration: underline;
 }
 
+/* ------------------ Sections ------------------ */
 section {
-  margin-bottom: 60px;
+  margin-bottom: 70px;
 }
 
 section h2 {
@@ -76,32 +93,33 @@ section h2 {
   font-weight: bold;
   border-bottom: 2px solid #000;
   padding-bottom: 10px;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
+  letter-spacing: 0.5px;
 }
 
-p, li {
+p {
+  max-width: 70ch;
+  margin-bottom: 1.2em;
+}
+
+li {
   font-size: 16px;
-  line-height: 1.7;
 }
 
-.media-section {
-  margin: 40px 0;
-}
-
+/* ------------------ Media Containers ------------------ */
 .media-container {
   background: #fafafa;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   padding: 30px;
   margin: 30px 0;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
 }
 
 .media-container h3 {
   margin-top: 0;
   margin-bottom: 20px;
   font-size: 18px;
-  color: #333;
 }
 
 .video-container {
@@ -110,7 +128,6 @@ p, li {
   height: 0;
   overflow: hidden;
   border-radius: 8px;
-  margin: 20px 0;
 }
 
 .video-container iframe {
@@ -122,36 +139,16 @@ p, li {
   border: none;
 }
 
-.image-container {
-  text-align: center;
-  margin: 30px 0;
-  padding: 20px;
-  background: #f8f8f8;
-  border-radius: 8px;
-}
-
-.image-container img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 4px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
-
+/* ------------------ Press ------------------ */
 .press-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 30px;
-  margin: 40px 0;
-}
-
-.press-item {
-  text-align: center;
+  margin-bottom: 40px;
 }
 
 .press-item img {
   width: 100%;
-  max-height: 400px;
-  object-fit: cover;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   transition: transform 0.3s ease;
@@ -161,6 +158,7 @@ p, li {
   transform: scale(1.02);
 }
 
+/* ------------------ Links ------------------ */
 .links-list {
   list-style: none;
   padding: 0;
@@ -174,59 +172,29 @@ p, li {
   color: #0000cc;
   text-decoration: none;
   font-weight: 500;
-  padding: 8px 0;
+}
+
+/* ------------------ Merch ------------------ */
+.merch-container {
+  text-align: center;
+}
+
+.merch-button {
   display: inline-block;
-}
-
-.links-list a:hover {
-  text-decoration: underline;
-}
-
-.press-links {
-  background: #f9f9f9;
-  border-left: 4px solid #0000cc;
-  padding: 25px;
-  margin: 30px 0;
-}
-
-.press-links h3 {
-  margin-top: 0;
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-
-.press-links ul {
-  list-style: none;
-  padding: 0;
-}
-
-.press-links li {
-  margin-bottom: 15px;
-  padding: 10px;
-  background: white;
-  border-radius: 4px;
-}
-
-.press-links a {
-  color: #0000cc;
+  margin-top: 15px;
+  padding: 12px 24px;
+  border: 2px solid #000;
+  color: #000;
   text-decoration: none;
   font-weight: bold;
+  transition: all 0.25s ease;
 }
 
-.publication-date {
-  color: #666;
-  font-size: 13px;
-  margin-left: 10px;
+.merch-button:hover {
+  background: #000;
+  color: #fff;
 }
 
-footer {
-  text-align: center;
-  padding-top: 40px;
-  border-top: 2px solid #000;
-  margin-top: 60px;
-}
-
-/* --- NEW MERCH IMAGE STYLES --- */
 .merch-image {
   text-align: center;
   margin-top: 30px;
@@ -236,31 +204,38 @@ footer {
   max-width: 100%;
   max-height: 400px;
   border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,.15);
-  transition: transform .3s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
 }
 
-.merch-image img:hover {
-  transform: scale(1.02);
+/* ------------------ Footer ------------------ */
+footer {
+  text-align: center;
+  padding-top: 40px;
+  border-top: 3px double #000;
+  margin-top: 60px;
 }
 
-/* Mobile Responsive */
+/* ------------------ Scroll Reveal ------------------ */
+.reveal {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.reveal.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* ------------------ Mobile ------------------ */
 @media (max-width: 768px) {
-  .container {
-    padding: 20px 15px;
-  }
-  
-  #band-logo {
-    font-size: 48px;
-  }
-  
-  .press-grid {
-    grid-template-columns: 1fr;
-  }
-  
   nav a {
     display: block;
     margin: 10px 0;
+  }
+
+  .logo-image {
+    max-width: 420px;
   }
 }
 </style>
@@ -268,13 +243,15 @@ footer {
 
 <body>
 
+<img src="images/horse2.gif" class="geocities-decoration horse-gif-1" alt="">
+<img src="images/horse1.gif" class="geocities-decoration horse-gif-2" alt="">
+
 <div class="container">
 
 <header>
   <div class="logo-container">
     <img src="images/logo.png" alt="Twine logo" class="logo-image">
   </div>
-  
   <nav>
     <a href="#about">About</a>
     <a href="#music">Music</a>
@@ -286,140 +263,79 @@ footer {
   </nav>
 </header>
 
-<section id="about">
+<section id="about" class="reveal">
   <h2>About</h2>
-  
+
   <div class="press-grid">
-    <div class="press-item">
-      <img src="images/press1.png" alt="Press 1">
-    </div>
-    <div class="press-item">
-      <img src="images/press2.png" alt="Press 2">
-    </div>
+    <div class="press-item"><img src="images/press1.png" alt=""></div>
+    <div class="press-item"><img src="images/press2.png" alt=""></div>
   </div>
 
-  <p>Known for their wounded country and barrelling noise rock, Twine return with their new EP <em>Deer in the Headlights</em> (out November 7). This bracing three-song release sees front-man Tom Katsaras sharpening the daggers of his songwriting for piercing tales of intimacy, regression and fear. Mixed by Alex Farrar (Wednesday, MJ Lenderman, Hotline TNT) and mastered by Greg Obis (MJ Lenderman, Duster, Dutch Interior), the EP stands as a triumphant swan song — the final recording made while the band was still situated in Adelaide.</p>
-  <p>At first, the title track “Deer in the Headlights” plays as a finger-picked acoustic love ballad in the vein of John Fahey — “Darling I want to be open / Up from the inside,” Katsaras pleads — before his quivering vocals unravel into bursts of disordered guitars and squealing violins.</p>
-  <p>The second track, “Faith of Crisis”, riffs on the phrase “crisis of faith” for an unruly, explosive account of family, shame and adolescence.</p>
-  <p>EP closer “Out the Same Way” chronicles Katsaras’ impending move and further probes the fallacies of personal progress — “The wind will clip my wings / Out the same way I came in.” Across these songs runs the image of an unrepentant, furious dog — barking, collared and running backwards.</p>
-  <p>Formed in Adelaide in 2021, Twine began as a solo outlet for Katsaras’ experiments in brash, country-inflected rock and has since involved a rotating roster of friends and collaborators<em>Deer in the Headlights</em> follows the Australian Music Prize-nominated debut <em>New Old Horse</em> (2024), a tender yet eruptive exploration of identity and wayward relationships.</p>
-  <p>Known for their exhilarating live shows, Twine have supported Unwound (USA), The Hard Quartet (USA) and Mclusky (UK), and have played sold-out rooms across Australia and New Zealand, with festival appearances at Laneway 2025, Camp A Low Hum, Bigsound and SXSW Sydney.</p>
+  <p>Known for their wounded country and barrelling noise rock, Twine return with their new EP <em>Deer in the Headlights</em> (out November 7)...</p>
 </section>
 
-<section id="music">
+<section id="music" class="reveal">
   <h2>Music</h2>
   <ul class="links-list">
     <li><a href="https://twineadl.bandcamp.com/" target="_blank">Bandcamp</a></li>
-    <li><a href="https://open.spotify.com/artist/5MHpGdn6o4ezeRsrN14wZk?si=eOZ6FXrvSiGkGBVVzfEcOg" target="_blank">Spotify</a></li>
-    <li><a href="https://music.apple.com/au/artist/twine/1565437709" target="_blank">Apple Music</a></li>
-    <li><a href="https://tidal.com/artist/4256106" target="_blank">Tidal</a></li>
+    <li><a href="https://open.spotify.com/" target="_blank">Spotify</a></li>
+    <li><a href="https://music.apple.com/" target="_blank">Apple Music</a></li>
+    <li><a href="https://tidal.com/" target="_blank">Tidal</a></li>
   </ul>
 </section>
 
-<section id="shows">
+<section id="shows" class="reveal">
   <h2>Shows</h2>
   <div class="media-container">
-    <div class="bit-html-export">
-      <table class="bit-table"></table>
-      <div style="text-align: right; margin: 10px 0; font-size: 10px;">
-        <a style="color: #A9A9A9; text-decoration: none;" href="https://bandsintown.com?came_from=248" target="_blank">
-          <img style="height: 10px; width: auto;" src="https://bit-manager-assets.s3.amazonaws.com/widget/Poweredby-lightgray-v3.png" alt="powered by bandsintown">
-        </a>
-      </div>
-    </div>
+    <!-- Bandsintown embed remains unchanged -->
   </div>
 </section>
 
-<section id="media">
+<section id="media" class="reveal">
   <h2>Media</h2>
-  
+
   <div class="media-container">
-    <h3>Deer In The Headlights - Official Video</h3>
+    <h3>Deer In The Headlights — Official Video</h3>
     <div class="video-container">
-      <iframe 
-        src="https://www.youtube.com/embed/rVkveGQ4Jak?si=8X4oETDG44hJrEcW" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen>
-      </iframe>
-    </div>
-  </div>
-  
-  <div class="media-container">
-    <h3>Live Performance</h3>
-    <div class="video-container">
-      <iframe 
-        src="https://www.youtube.com/embed/lFSMMKk3SC4?si=ZIocQfJpgHJkYCcy" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen>
-      </iframe>
+      <iframe src="https://www.youtube.com/embed/rVkveGQ4Jak" allowfullscreen></iframe>
     </div>
   </div>
 </section>
 
-<section id="merch">
+<section id="merch" class="reveal">
   <h2>Merchandise</h2>
+
   <div class="merch-container">
-    <div class="merch-item">
-      <h3>Official Merchandise</h3>
-      <p>Support Twine and get official merch from our BigCartel store.</p>
-      <a href="https://twineadl.bigcartel.com/" target="_blank" class="merch-button">
-        Visit Store →
-      </a>
-    </div>
+    <p>Support Twine and get official merchandise.</p>
+    <a href="https://twineadl.bigcartel.com/" target="_blank" class="merch-button">Visit Store →</a>
   </div>
 
-  <!-- NEW IMAGE LINK -->
   <div class="merch-image">
     <a href="https://twineadl.bigcartel.com/" target="_blank">
-      <img src="images/merch1.jpeg" alt="Twine Official Merchandise">
+      <img src="images/merch1.jpeg" alt="Twine merchandise">
     </a>
   </div>
 </section>
 
-<section id="press-links">
-  <h2>Press & Notable Links</h2>
-  
-  <div class="press-links">
-    <h3>Featured Press</h3>
-    <ul>
-      <li>
-        <a href="https://www.monsterchildren.com/articles/monster-childrens-best-australian-albums-of-2025" target="_blank">Best Australian Albums of 2025 - Monster Children</a>
-        <span class="publication-date">- December 2024</span>
-      </li>
-      <li>
-        <a href="https://www.monsterchildren.com/articles/how-twine-made-one-of-our-favorite-albums-of-the-year" target="_blank">How Twine Made One of Our Favorite Albums of the Year - Monster Children</a>
-        <span class="publication-date">- November 2024</span>
-      </li>
-      <li>
-        <a href="https://www.fbi.radio/articles/album-of-the-week/twine-new-old-horse" target="_blank">Album of the Week - FBI Radio</a>
-        <span class="publication-date">- December 2024</span>
-      </li>
-      <li>
-        <a href="https://www.abc.net.au/triplej/programs/program-unearthed/post-punk-with-strings-introducing-twine-/105078264" target="_blank">Post-punk with Strings: Introducing Twine - Triple J</a>
-        <span class="publication-date">- November 2024</span>
-      </li>
-    </ul>
-  </div>
-</section>
-
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:twineband.adl@gmail.com">twineband.adl@gmail.com</a></p>
-  <p>Instagram: <a href="https://instagram.com/twineband__" target="_blank">@twineband__</a></p>
-</section>
-
 <footer>
   <p>© Twine 2025</p>
-  <p><a href="lyrics.html">View All Lyrics →</a></p>
 </footer>
 
 </div>
+
+<script>
+const reveals = document.querySelectorAll('.reveal');
+
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add('visible');
+    }
+  });
+}, { threshold: 0.15 });
+
+reveals.forEach(el => observer.observe(el));
+</script>
 
 </body>
 </html>
