--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@ body {
   pointer-events: none;
 }
 
-.horse-gif-1 {
-  bottom: 80px;
-  left: 40px;
-  width: 180px;
+.horse-gif-2 {
+  top: 140px;
+  right: 40px;
+  width: 320px;
+  height: auto;
 }
 
 .horse-gif-2 {
